Fix scrollbar behavior when no custom root selected

--- a/src/components/PrimaryPanes/Sources.css
+++ b/src/components/PrimaryPanes/Sources.css
@@ -54,11 +54,20 @@
   margin-left: 5px;
 }
 
+.sources-pane {
+  display: flex;
+  flex: 1;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
 .sources-list {
   flex: 1;
   display: flex;
+  /*
   overflow-x: hidden;
   overflow-y: auto;
+  */
 }
 
 .sources-list-custom-root {
